大屏展示基本样式

--- a/web/base/css/reset.css
+++ b/web/base/css/reset.css
@@ -21,6 +21,9 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 body {
     line-height: 1;
 }
+div,p{
+    box-sizing: border-box;
+}
 ol, ul {
     list-style: none;
 }
