--- a/web/base/css/index.css
+++ b/web/base/css/index.css
@@ -1,9 +1,51 @@
+.content{
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+.leftTab{
+    position: absolute;
+    left: 1%;
+    width: 20%;
+    height: 100%;
+    margin-top: 1%;
+    overflow: hidden;
+}
+.rightTab{
+    position: absolute;
+    right: 1%;
+    width: 20%;
+    height: 100%;
+    margin-top: 1%;
+    overflow: hidden;
+}
+.bottomTab{
+    position: absolute;
+    left: 22%;
+    bottom: 4%;
+    width: 20%;
+    height: 29%;
+
+    overflow: hidden;
+}
+.iconConten{
+    width:100%;
+    height: 100%;
+    /*margin-top: 6%;*/
+}
 .iconContent{
+    width:100%;
+    height: 29%;
+    margin-top: 6%;
+}
+.bgColor{
     position:relative;
-    top:50px;
-    left: 50px;
-    width:400px;
-    height: 300px;
+    border:2px solid #001AAD;
+    box-shadow: inset 0px 0px 55px #001AAD;
+    background :#001347;
+}
+.bgColor-last{
+    position:fixed;
     border:2px solid #001AAD;
     box-shadow: inset 0px 0px 55px #001AAD;
     background :#001347;
@@ -47,12 +89,11 @@
 }
 .line {
     display: inline-block;
-    width: 30px;
-    height: 45px;
-    line-height: 45px;
-    color: yellow;
-    margin:0 2px;
-    font-size: 30px;
+    width: 25px;
+    height: 33px;
+    line-height: 33px;
+    margin:0 1px;
+    font-size: 24px;
     text-align :center;
     background: linear-gradient(#414356, #1F1C27);
     border-radius: 4px;
@@ -64,20 +105,60 @@
     height: 45px;
     font-size: 30px;
     line-height: 45px;
-    color: yellow;
     text-align :center;
 }
-.totalCar{
-
+#totalMoney{
+    color: #14EF88;
+}
+.titleTal p{
+    font-size: 19px;
+    margin: 12px 0 12px 0;
 }
 .titleTal{
     color: #ddd;
     font-weight :700;
     font-size: 21px;
     text-align: center;
-    margin-top: 23px;
+    margin-top: 11px;
 }
 .carNum{
     text-align: center;
-    margin-top :22px;
+    margin-top :11px;
+    color: yellow;
+}
+
+/*title*/
+.headTitle{
+    position: absolute;
+    left: 50%;
+    margin-top: 15px;
+    width: 50%;
+    transform: translateX(-50%);
+}
+.title-text{
+    width: 100%;
+    height: 65px;
+}
+.titleText{
+    text-align: center;
+    color: #fff;
+    height: 60px;
+    line-height: 60px;
+    font-size: 26px;
+    font-weight: 600;
+}
+.time{
+    width:50%;
+    height: 40px;
+    position: absolute;
+    right: -2px;
+    top: 62px;
+    border-top: none;
+}
+.noeTime{
+    color: #9a9be1;
+    text-align: center;
+    height: 42px;
+    font-size: 19px;
+    line-height: 42px;
 }
