--- a/web/base/css/index.css
+++ b/web/base/css/index.css
@@ -1,30 +1,49 @@
+html,body{
+    background: #031F2D;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
 .content{
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
+.totalCar{
+    height: 100%;
+    width: 100%;
+}
 .leftTab{
     position: absolute;
     left: 1%;
-    width: 20%;
+    width: 22%;
     height: 100%;
-    margin-top: 1%;
     overflow: hidden;
 }
 .rightTab{
     position: absolute;
     right: 1%;
-    width: 20%;
+    width: 22%;
     height: 100%;
     margin-top: 1%;
     overflow: hidden;
 }
+.rightContent{
+    width:100%;
+    height: 45%;
+    margin-top: 3%;
+}
+.rightContent:nth-child(2){
+    height: 33%;
+    top: 15%;
+}
 .bottomTab{
     position: absolute;
-    left: 22%;
-    bottom: 4%;
-    width: 20%;
-    height: 29%;
+    left: 24%;
+    bottom: 3%;
+    width: 22%;
+    z-index: 2;
+    height: 31%;
 
     overflow: hidden;
 }
@@ -35,8 +54,8 @@
 }
 .iconContent{
     width:100%;
-    height: 29%;
-    margin-top: 6%;
+    height: 31%;
+    margin-top: 3%;
 }
 .bgColor{
     position:relative;
@@ -112,7 +131,7 @@
 }
 .titleTal p{
     font-size: 19px;
-    margin: 12px 0 12px 0;
+    margin: 6% 0;
 }
 .titleTal{
     color: #ddd;
@@ -152,7 +171,7 @@
     height: 40px;
     position: absolute;
     right: -2px;
-    top: 62px;
+    top: 61px;
     border-top: none;
 }
 .noeTime{
@@ -161,4 +180,13 @@
     height: 42px;
     font-size: 19px;
     line-height: 42px;
+}
+.map{
+    position: fixed;
+    left: 19%;
+    top: 8%;
+    width: 63%;
+    z-index: 1;
+    height: 83%;
+
 }
