--- a/web/base/css/index.css
+++ b/web/base/css/index.css
@@ -26,11 +26,13 @@ html,body{
 .tableDiv table.divTable th{
     text-align: left;
     font-size: 15px;
+    padding: 6px;
     border:none;
 }
 .tableDiv table.divTable td{
  text-align: right;
     border:none;
+    padding: 6px;
     font-size: 15px;
     color: #02CFD7;
 }
@@ -51,17 +53,17 @@ html,body{
 }
 .rightContent{
     width:100%;
-    height: 45%;
+    height: 52%;
     margin-top: 3%;
 }
 .rightContent:nth-child(2){
     height: 33%;
-    top: 15%;
+    top: 8%;
 }
 .bottomTab{
     position: absolute;
     left: 24%;
-    bottom: 3%;
+    bottom: 2.7%;
     width: 22%;
     z-index: 2;
     height: 31%;
@@ -204,10 +206,58 @@ html,body{
 }
 .map{
     position: fixed;
-    left: 19%;
-    top: 8%;
-    width: 63%;
+    left: 8%;
+    top: 5%;
+    width:82%;
     z-index: 1;
-    height: 83%;
-
+    height: 92%;
+}
+.modalMap{
+    position: fixed;
+    left: 8%;
+    top: 5%;
+    width:82%;
+    z-index: 2;
+    height: 92%;
+}
+.nowList{
+    color: #fff;
+    font-size: 18px;
+    margin-left: 2%;
+    font-weight: 600;
+}
+/*进度条*/
+.loadWrapper{
+    width: 100%;
+    height: 18px;
+    margin: 5% auto;
+}
+.loadTitle{
+    display: inline-block;
+    width: 16%;
+    color: #fff;
+    vertical-align: top;
+    text-align: right;
+}
+.centLoad{
+    display: inline-block;
+    width: 65%;
+    height: 100%;
+    border:2px solid #B7AD12;
+    background: rgba(183,229,10,.3);
+    overflow: hidden;
+}
+.precentLoad{
+    display: inline-block;
+    width: 10%;
+    color: #fff;
+    vertical-align: top;
+    text-align: left;
+}
+.loadWidth{
+    display: inline-block;;
+    width: 60%;
+    height: 100%;
+    background: rgba(249,229,10,.8);
+    transition:all 400ms;
 }
