html生成图片显示上传下载

--- a/web/base/css/index.css
+++ b/web/base/css/index.css
@@ -264,3 +264,7 @@ html,body{
     background: rgba(249,229,10,.8);
     transition:all 400ms;
 }
+/**数字容器**/
+.numberWrapper{
+    position: absolute;
+}
